--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "mapbox-gl": "^1.8.1",
+    "mapbox-gl": "^1.10.1",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.17",
     "vuex": "^3.1.2"
